src/frontend/components/RichTextEditor/RichTextEditor.css
.rich-text-editor {
  max-width: calc(100vw - 2rem);
  width: 30rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.75rem;
  padding: 0.75rem 1rem;
  border: 1px solid var(--color-background-accent-two);
  border-radius: 5px;
}

.note-title-and-pin {
  width: 95%;
  display: flex;
}

.note-title {
  flex-grow: 1;
  font-size: 1.25rem;
  font-weight: 500;
  color: var(--color-foreground);
}

.note-pin {
  color: var(--color-background-accent-three);
  align-self: flex-end;
}

.quill {
  font-family: "Rubik", sans-serif;
  width: 95%;
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.ql-toolbar.ql-snow {
  border: none;
  font-family: "Rubik", sans-serif;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 0.75rem;
  padding: 0;
}

.ql-snow.ql-toolbar:after {
  content: none;
}

.ql-toolbar.ql-snow .ql-formats {
  margin-right: 0;
  display: flex;
  gap: 0.25rem;
}

.ql-snow.ql-toolbar button {
  border-radius: 5px;
}

.ql-snow.ql-toolbar button:hover {
  color: var(--color-background-accent-three);
  background-color: var(--color-background-accent-one);
}

.ql-snow.ql-toolbar button.ql-active {
  color: white;
  background-color: var(--color-background-accent-one);
}

.ql-snow.ql-toolbar button:hover .ql-stroke {
  stroke: var(--color-background-accent-three);
}

.ql-snow.ql-toolbar button.ql-active .ql-stroke {
  stroke: var(--color-background-accent-three);
}

.ql-snow.ql-toolbar button:hover .ql-fill {
  fill: var(--color-background-accent-three);
}

.ql-snow.ql-toolbar button.ql-active .ql-fill {
  fill: var(--color-background-accent-three);
}

.ql-snow .ql-stroke {
  stroke: var(--color-background-accent-three);
}

.ql-snow .ql-fill {
  fill: var(--color-background-accent-three);
}

.ql-container.ql-snow {
  border: none;
  color: var(--color-foreground);
}

.ql-editor {
  color: var(--color-foreground);
  font-family: "Rubik", sans-serif;
  font-size: 1rem;
  padding: 0;
}

.ql-editor.ql-blank::before {
  color: var(--color-background-accent-three);
  font-style: normal;
  left: 0;
}

.ql-snow .ql-editor pre.ql-syntax {
  background-color: var(--color-foreground);
  color: var(--color-background);
}

.ql-snow .ql-tooltip {
  background-color: var(--color-background-accent-one);
  border: none;
  border-radius: 5px;
  color: var(--color-background-accent-three);
  padding: 0.75rem 0.5rem;
  box-shadow: none;
}

.ql-snow .ql-tooltip[data-mode="link"]::before {
  content: none;
}

.ql-snow .ql-tooltip[data-mode="video"]::before {
  content: none;
}

.ql-snow .ql-tooltip input[type="text"] {
  border: 1px solid var(--color-background-accent-two);
  border-radius: 5px;
  padding: 1rem 0.75rem;
  color: var(--color-foreground);
}

.ql-snow a {
  color: var(--color-foreground);
}

.ql-snow .ql-tooltip a.ql-action::after {
  margin-left: 0.5rem;
  font-weight: 600;
}

::-webkit-input-placeholder {
  /* Chrome/Opera/Safari */
  color: var(--color-background-accent-three);
}
::-moz-placeholder {
  /* Firefox 19+ */
  color: var(--color-background-accent-three);
}
:-ms-input-placeholder {
  /* IE 10+ */
  color: var(--color-background-accent-three);
}
:-moz-placeholder {
  /* Firefox 18- */
  color: var(--color-background-accent-three);
}

.labels {
  align-self: flex-start;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.label {
  font-size: 0.875rem;
  padding: 0.25rem 0.5rem;
  background-color: var(--color-background-accent-one);
  border-radius: 1rem;
  display: flex;
  align-items: center;
  gap: 0.25rem;
}

.label-delete {
  cursor: pointer;
  font-size: inherit;
}

.note-actions {
  margin-top: 0.25rem;
  color: var(--color-background-accent-three);
  align-self: stretch;
  display: flex;
  align-items: center;
  gap: 0.75rem;
}

.note-actions .btn {
  margin-left: auto;
}

.note-color {
  position: relative;
}

.note-colors {
  position: absolute;
  background-color: var(--color-background);
  border-radius: 5px;
  border: 1px solid var(--color-background-accent-two);
  padding: 0.5rem;
  display: flex;
  gap: 0.5rem;
}

.note-colors > span {
  cursor: pointer;
  padding: 0.875rem;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  aspect-ratio: 1 / 1;
}

.color-1 {
  background-color: var(--color-note-1);
}

.color-2 {
  background-color: var(--color-note-2);
}

.color-3 {
  background-color: var(--color-note-3);
}

.color-4 {
  background-color: var(--color-note-4);
}

.color-5 {
  background-color: var(--color-note-5);
}

.color-6 {
  background-color: var(--color-note-6);
}

.color-7 {
  background-color: var(--color-note-7);
}

.color-outline {
  outline: 3px solid var(--color-background-accent-three);
}

.color-border {
  outline: 1px solid var(--color-background-accent-three);
}

.note-label {
  position: relative;
}

.note-add-label {
  display: flex;
  gap: 0.5rem;
}

.note-add-label > input {
  border: 1px solid var(--color-background-accent-two);
  border-radius: 5px;
  padding: 2px;
  width: 8rem;
}

.note-labels {
  position: absolute;
  background-color: var(--color-background);
  border-radius: 5px;
  border: 1px solid var(--color-background-accent-two);
  padding: 0.5rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

